--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "format": "prettier --write 'src/**/*.{js,jsx,json,css,md}'"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "framer-motion": "^11.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
